examples/statefulset/apache-sts-pvc.yaml
apiVersion: apps/v1beta2
kind: StatefulSet
metadata:
  name: apache
  namespace:
  labels:
    type: statefulset
spec:
  serviceName: web
  replicas: 3
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
      - name: apache
        image: centos/httpd:latest
        ports:
        - containerPort: 80
          name: web
  volumeClaimTemplates:
  - metadata:
      name: www
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
      storageClassName: default
