examples/statefulset/apache-sts.yaml
---
apiVersion: apps/v1beta2
kind: StatefulSet
metadata:
  name: apache
  namespace:
  labels:
    type: statefulset
spec:
  podManagementPolicy: OrderedReady
  serviceName: web
  replicas: 2
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
      - name: apache
        image: centos/httpd:latest
        ports:
        - containerPort: 80
          name: web
