examples/statefulset/apache-headless-sts.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: apache
spec:
  ports:
  - port: 80
    name: web
  clusterIP: None
  selector:
    app: apache
