examples/statefulset/consul-svc-ext.yaml
apiVersion: v1
kind: Service
metadata:
  name: consul-ext
  labels:
    app: consul
spec:
  type: ClusterIP
  ports:
  - name: ui
    port: 8500
    targetPort: 8500
  selector:
    app: consul
